--- a/widget.ui
+++ b/widget.ui
@@ -171,21 +171,21 @@
      </widget>
      <widget class="QWidget" name="layoutWidget">
       <layout class="QGridLayout" name="gridLayout">
-       <item row="1" column="2">
+       <item row="1" column="1">
         <widget class="QTextBrowser" name="textBrowserFunctions">
          <property name="readOnly">
           <bool>false</bool>
          </property>
         </widget>
        </item>
-       <item row="1" column="1">
+       <item row="1" column="0">
         <widget class="QTextBrowser" name="textBrowserCppDeclares">
          <property name="readOnly">
           <bool>false</bool>
          </property>
         </widget>
        </item>
-       <item row="0" column="2">
+       <item row="0" column="1">
         <widget class="QLabel" name="labelFunctions">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -198,7 +198,7 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="1">
+       <item row="0" column="0">
         <widget class="QLabel" name="labelCppDeclares">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -208,26 +208,6 @@
          </property>
          <property name="text">
           <string>C++ Declares:</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="0">
-        <widget class="QLabel" name="labelBatchSet">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="text">
-          <string>Batch Set:</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="0">
-        <widget class="QTextBrowser" name="textBrowserBatchSet">
-         <property name="readOnly">
-          <bool>false</bool>
          </property>
         </widget>
        </item>
@@ -307,6 +287,13 @@
       </widget>
      </item>
      <item>
+      <widget class="QPushButton" name="pushButtonExportClass">
+       <property name="text">
+        <string>Export</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="horizontalSpacer_2">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -327,7 +314,6 @@
  <tabstops>
   <tabstop>tableWidgetProperties</tabstop>
   <tabstop>listWidgetOrder</tabstop>
-  <tabstop>textBrowserBatchSet</tabstop>
   <tabstop>textBrowserCppDeclares</tabstop>
   <tabstop>textBrowserFunctions</tabstop>
   <tabstop>pushButtonOpenProject</tabstop>
