On branch master 	modified:   QtPropertyCodeGenerator.pro 	modified:   classsettings.h 	renamed:    test.ini -> classsettings.ini 	modified:   dialogset.cpp 	modified:   dialogset.h 	modified:   dialogset.ui 	new file:   enumtype.cpp 	new file:   enumtype.h 	new file:   enumtype.ini 	modified:   propertiesgroup.cpp 	modified:   propertiesgroup.h 	modified:   propertiesgroupInlineFunctions.h 	modified:   propertiesgroupdata.cpp 	modified:   propertiesgroupdata.h 	modified:   property.cpp 	renamed:    propertyInlineFunctions (copy).h -> stash1/propertyInlineFunctions (copy).h 	new file:   test1.ini 	modified:   widget.cpp 	modified:   widget.ui

--- a/dialogset.ui
+++ b/dialogset.ui
@@ -144,6 +144,11 @@
              <string>Inherits QQuickItem</string>
             </property>
            </item>
+           <item>
+            <property name="text">
+             <string>inherits QWidget and associate width ui file</string>
+            </property>
+           </item>
           </widget>
          </item>
          <item>
@@ -306,12 +311,184 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="tab_2">
+     <widget class="QWidget" name="tabEnumType">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
       <attribute name="title">
-       <string>Tab 2</string>
+       <string>Enum Type</string>
       </attribute>
-      <zorder></zorder>
-      <zorder></zorder>
+      <layout class="QHBoxLayout" name="horizontalLayout_6">
+       <item>
+        <layout class="QVBoxLayout" name="verticalLayout_3">
+         <item>
+          <widget class="QLabel" name="labelEnumTypeList">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="text">
+            <string>Type List:</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QListWidget" name="listWidgetEnumTypeList">
+           <property name="editTriggers">
+            <set>QAbstractItemView::NoEditTriggers</set>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_5">
+           <item>
+            <spacer name="horizontalSpacer_9">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item>
+            <widget class="QPushButton" name="pushButtonEnumTypeNameAdd">
+             <property name="text">
+              <string>Add</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="pushButtonEnumTypeNameRemove">
+             <property name="text">
+              <string>Remove</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <spacer name="horizontalSpacer_10">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <spacer name="verticalSpacer">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>40</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <layout class="QVBoxLayout" name="verticalLayout_5">
+         <item>
+          <layout class="QFormLayout" name="formLayout">
+           <item row="0" column="0">
+            <widget class="QLabel" name="labelEnumTypeName">
+             <property name="text">
+              <string>Type Name:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="1">
+            <widget class="QLineEdit" name="lineEditEnumTypeName"/>
+           </item>
+           <item row="1" column="0">
+            <widget class="QLabel" name="labelEnumPrefix">
+             <property name="text">
+              <string>prefix:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="QLineEdit" name="lineEditEnumPrefix"/>
+           </item>
+           <item row="2" column="0">
+            <widget class="QLabel" name="labelEnumSuffix">
+             <property name="text">
+              <string>suffix:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="1">
+            <widget class="QLineEdit" name="lineEditEnumSuffix"/>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <layout class="QVBoxLayout" name="verticalLayout_4">
+           <item>
+            <widget class="QLabel" name="labelEnumVars">
+             <property name="text">
+              <string>Vars:</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPlainTextEdit" name="plainTextEditEnumsVars"/>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <spacer name="verticalSpacer_2">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>40</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+        </layout>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="tabEnumDeclare">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <attribute name="title">
+       <string>Enum Declare</string>
+      </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout_6">
+       <item>
+        <widget class="QPlainTextEdit" name="plainTextEditEnumDeclare"/>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="tabTypeOrder">
+      <attribute name="title">
+       <string>Type Order</string>
+      </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout_7">
+       <item>
+        <widget class="QPlainTextEdit" name="plainTextEditTypeOrder"/>
+       </item>
+      </layout>
      </widget>
     </widget>
    </item>
