--- a/dialogset.ui
+++ b/dialogset.ui
@@ -6,19 +6,22 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>624</width>
-    <height>655</height>
+    <width>575</width>
+    <height>489</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Settings</string>
+  </property>
+  <property name="locale">
+   <locale language="C" country="AnyCountry"/>
   </property>
   <property name="modal">
    <bool>true</bool>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QTabWidget" name="tabWidget">
+    <widget class="QTabWidget" name="tabWidgetSet">
      <property name="currentIndex">
       <number>0</number>
      </property>
@@ -46,7 +49,11 @@
           </widget>
          </item>
          <item>
-          <widget class="QLineEdit" name="lineEditClassName"/>
+          <widget class="QLineEdit" name="lineEditClassName">
+           <property name="dragEnabled">
+            <bool>true</bool>
+           </property>
+          </widget>
          </item>
          <item>
           <spacer name="horizontalSpacer_3">
@@ -81,7 +88,11 @@
           </widget>
          </item>
          <item>
-          <widget class="QLineEdit" name="lineEditClassInherits"/>
+          <widget class="QLineEdit" name="lineEditClassInherits">
+           <property name="dragEnabled">
+            <bool>true</bool>
+           </property>
+          </widget>
          </item>
          <item>
           <spacer name="horizontalSpacer_5">
@@ -95,6 +106,67 @@
             </size>
            </property>
           </spacer>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_7">
+         <item>
+          <widget class="QLabel" name="labelClassDocName">
+           <property name="text">
+            <string>Doc Name:</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLineEdit" name="lineEditClassDocName">
+           <property name="dragEnabled">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_11">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_8">
+         <item>
+          <widget class="QLabel" name="labelClassDocDetail">
+           <property name="text">
+            <string>Doc Detail:</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLineEdit" name="lineEditClassDocDetail">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+           </property>
+           <property name="dragEnabled">
+            <bool>true</bool>
+           </property>
+          </widget>
          </item>
         </layout>
        </item>
@@ -167,9 +239,122 @@
         </layout>
        </item>
        <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_9">
+         <item>
+          <widget class="QCheckBox" name="checkBoxClassGeneratePreventReentrantCode">
+           <property name="text">
+            <string>Generate Prevent Reentrant Code</string>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_12">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <spacer name="verticalSpacer_3">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeType">
+          <enum>QSizePolicy::MinimumExpanding</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>30</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="tabPropertiesGroup">
+      <attribute name="title">
+       <string>PropertiesGroup</string>
+      </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout_8">
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_13">
+         <item>
+          <widget class="QComboBox" name="comboBoxPropertiesGroups"/>
+         </item>
+         <item>
+          <widget class="QPushButton" name="pushButtonPropertiesGroupChangeName">
+           <property name="text">
+            <string>ChangeName</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_20">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QLabel" name="labelPropertiesGroupName">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="text">
+            <string>Name:</string>
+           </property>
+           <property name="buddy">
+            <cstring>lineEditClassName</cstring>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLineEdit" name="lineEditPropertiesGroupName">
+           <property name="dragEnabled">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_19">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+        </layout>
+       </item>
+       <item>
         <layout class="QHBoxLayout" name="horizontalLayout_2">
          <item>
-          <widget class="QCheckBox" name="checkBoxGroupReadFunctionIsInline">
+          <widget class="QCheckBox" name="checkBoxPropertiesGroupReadFunctionIsInline">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
              <horstretch>0</horstretch>
@@ -178,6 +363,9 @@
            </property>
            <property name="text">
             <string>ReadFunction is inline</string>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
            </property>
           </widget>
          </item>
@@ -195,7 +383,7 @@
           </spacer>
          </item>
          <item>
-          <widget class="QCheckBox" name="checkBoxGroupWriteFunctionIsInline">
+          <widget class="QCheckBox" name="checkBoxPropertiesGroupWriteFunctionIsInline">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
              <horstretch>0</horstretch>
@@ -221,7 +409,7 @@
           </spacer>
          </item>
          <item>
-          <widget class="QCheckBox" name="checkBoxGroupWriteFunctionEmitSignal">
+          <widget class="QCheckBox" name="checkBoxPropertiesGroupWriteFunctionEmitSignal">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
              <horstretch>0</horstretch>
@@ -230,6 +418,9 @@
            </property>
            <property name="text">
             <string>Write function emit signal</string>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
            </property>
           </widget>
          </item>
@@ -251,7 +442,7 @@
        <item>
         <layout class="QGridLayout" name="gridLayout">
          <item row="0" column="0">
-          <widget class="QLabel" name="labelGroupWriteFunctionStart">
+          <widget class="QLabel" name="labelPropertiesGroupWriteFunctionStart">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Fixed" vsizetype="MinimumExpanding">
              <horstretch>0</horstretch>
@@ -267,7 +458,7 @@
           </widget>
          </item>
          <item row="1" column="0">
-          <widget class="QLabel" name="labelGroupWriteFunctionMiddle">
+          <widget class="QLabel" name="labelPropertiesGroupWriteFunctionMiddle">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Fixed" vsizetype="MinimumExpanding">
              <horstretch>0</horstretch>
@@ -283,7 +474,7 @@
           </widget>
          </item>
          <item row="2" column="0">
-          <widget class="QLabel" name="labelGroupWriteFunctionLast">
+          <widget class="QLabel" name="labelPropertiesGroupWriteFunctionLast">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Fixed" vsizetype="MinimumExpanding">
              <horstretch>0</horstretch>
@@ -299,13 +490,57 @@
           </widget>
          </item>
          <item row="0" column="1">
-          <widget class="QPlainTextEdit" name="plainTextEditGroupWriteFunctionStart"/>
+          <widget class="QPlainTextEdit" name="plainTextEditPropertiesGroupWriteFunctionStart"/>
          </item>
          <item row="1" column="1">
-          <widget class="QPlainTextEdit" name="plainTextEditGroupWriteFunctionMiddle"/>
+          <widget class="QPlainTextEdit" name="plainTextEditPropertiesGroupWriteFunctionMiddle"/>
          </item>
          <item row="2" column="1">
-          <widget class="QPlainTextEdit" name="plainTextEditGroupWriteFunctionLast"/>
+          <widget class="QPlainTextEdit" name="plainTextEditPropertiesGroupWriteFunctionLast"/>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <spacer name="horizontalSpacer">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QPushButton" name="pushButtonPropertiesGroupAdd">
+           <property name="text">
+            <string>&amp;Add</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="pushButtonPropertiesGroupRemove">
+           <property name="text">
+            <string>&amp;Remove</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_2">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
          </item>
         </layout>
        </item>
@@ -492,86 +727,13 @@
      </widget>
     </widget>
    </item>
-   <item>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <spacer name="horizontalSpacer">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QPushButton" name="pushButtonOpenSettingsPolicy">
-       <property name="text">
-        <string>&amp;Open</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="pushButtonSaveSettingsPolicy">
-       <property name="text">
-        <string>&amp;Save</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="pushButtonSaveSettingsPolicyAs">
-       <property name="text">
-        <string>Save As...</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="pushButtonNewSettingsPolicy">
-       <property name="text">
-        <string>&amp;New</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="pushButtonCloseSettingsDialog">
-       <property name="text">
-        <string>Close</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <spacer name="horizontalSpacer_2">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-    </layout>
-   </item>
   </layout>
  </widget>
  <tabstops>
-  <tabstop>tabWidget</tabstop>
-  <tabstop>pushButtonOpenSettingsPolicy</tabstop>
-  <tabstop>pushButtonSaveSettingsPolicy</tabstop>
-  <tabstop>pushButtonSaveSettingsPolicyAs</tabstop>
-  <tabstop>pushButtonNewSettingsPolicy</tabstop>
-  <tabstop>pushButtonCloseSettingsDialog</tabstop>
+  <tabstop>tabWidgetSet</tabstop>
   <tabstop>lineEditClassName</tabstop>
   <tabstop>lineEditClassInherits</tabstop>
   <tabstop>comboBoxClassTypeInformation</tabstop>
-  <tabstop>checkBoxGroupReadFunctionIsInline</tabstop>
-  <tabstop>checkBoxGroupWriteFunctionIsInline</tabstop>
-  <tabstop>checkBoxGroupWriteFunctionEmitSignal</tabstop>
  </tabstops>
  <resources/>
  <connections/>
